# GyenBox

./: .env.example  .gcloudignore  .gitignore  .vercelignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json
GB-Android/gyenbox-1/: README.md  metadata.json
GB-Android/gyenbox-2/: README.md  metadata.json
GB-Web/gyenbox-web 1/: README.md  metadata.json
GB-Web/gyenbox-web 1/src/: App.tsx  (+3 more)
GB-Web/gyenbox-web 2/: README.md  metadata.json
apps/desktop/: README.md  electron-builder.yml  package.json  tsconfig.json
apps/web/: middleware.ts  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
crates/gyenbox-bootstrapper/: Cargo.toml  build.rs
crates/gyenbox-bootstrapper/src/: main.rs
crates/gyenbox-shell/: Cargo.toml
crates/gyenbox-sync/: Cargo.toml
crates/gyenbox-sync/src/: cloud_files.rs  cloud_provider.rs  config.rs  db.rs  diag_log.rs  events.rs  folder_launcher.rs  hasher.rs  main.rs  queue.rs  scanner.rs  shell_sync_root.rs  types.rs  watcher.rs
crates/tempora/: Cargo.toml
docs/: AUDIT-LOG.md  android-architecture.md  android-product-design.md  codebase-report.md  deployment-optimization-report.md  deployment-safety-runbook.md  desktop-auth-sync-architecture.md  desktop-dropbox-parity-acceptance.md  desktop-sync-provider-design.md  desktop-ui-redesign-preview.html  gyenbox-design-style.md  gyenbox-installer-iwriter-preview.html  gyenbox-vi-logo-notes.md  hs-membership-quick-report.md  membership-system.md  storage-commercialization-roadmap.md  tempora-design.md
(+166 files in other folders)
