[package]
name = "gyenbox-bootstrapper"
version = "0.1.21"
edition = "2024"

[[bin]]
name = "gyenbox-bootstrapper"
path = "src/main.rs"

[features]
default = []
embed-installer = []

[dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
